# antpov

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  timings.txt
CMake/: ConfigCompilerFlags.cmake
ant03/: ant03.sh  ant03_td.sh
ant12/: ant12.sh
data/: .gitignore  A_cube.gltf  README.md  ant.json  axis_coloured_blocks.gltf  axis_coloured_blocks_cutout.gltf  axis_coloured_blocks_cutout_norot.gltf  axis_coloured_blocks_fourpi.gltf  axis_coloured_blocks_norotn.gltf  axis_coloured_blocks_sph.gltf  axis_coloured_blocks_zernike.gltf  cube_bigdip.gltf  cube_centred.gltf  cube_dented.gltf  cube_dented_rotated.gltf  cube_dented_rotated2.gltf  cube_dented_scaled.gltf  cube_dented_scaled_nonuniform.gltf  cube_dropped.gltf  cube_raised.gltf  cubes2.gltf  cubes3.gltf  cubes4.gltf  film_direction.json  natural_env.csv  natural_env.json  natural_env_coloured_blocks.gltf  natural_env_land.gltf  natural_env_land_rot.gltf  natural_env_land_rot_nonuniformscale.gltf  natural_env_nopasted_plus_landscape.gltf  natural_env_pasted_no_landscape.gltf  natural_env_rock.gltf  oneblock.gltf  rockclr.gltf  rockclr2.gltf
data/blender_cube/: blender_cube_compoundray.gltf
data/eyes/: ant_eyes_dhex.eye  cyl.eye  fourpi.eye  foveated_cutout.eye  foveated_eye.eye  foveated_pair.eye  velox-head.eye  velox-head.gltf  velox.eye  zernike.eye
data/flow_vis/: FlowParameters.json  FlowParameters1.json  FlowParameters2.json
data/natural_standin_sky/: natural_standin_sky.gltf
data/rhombohedrons/: rhombohedrons.gltf  rhombohedrons_fourpi.gltf
data/seville/: .gitignore  Ant03R01-warped.csv  Ant03R01-warped.csv.world.csv  Ant03R01-warped.csv.world.csv.3d.csv  Ant03R01-warped.csv.world.json  Ant03R01-warped.csv.world.topdown.json  Ant03R01-warped.csv.world.topdown_higher.json  Ant03R02-warped.csv  Ant03R02-warped.csv.world.csv  Ant03R02-warped.csv.world.csv.3d.csv  Ant03R02-warped.csv.world.topdown.json  Ant03R02_labels.csv  Ant03R03-warped.csv  Ant03R03-warped.csv.world.csv  Ant03R03-warped.csv.world.csv.3d.csv  Ant03R03-warped.csv.world.topdown.json  Ant03R03_labels.csv  Ant03R05-warped.csv  Ant03R05-warped.csv.world.csv  Ant03R05-warped.csv.world.csv.3d.csv  Ant03R05-warped.csv.world.json  Ant03R05-warped.csv.world.topdown.json  Ant03R05_labels.csv  Ant03R07_labels.csv  Ant03ZVF-warped.csv  Ant03ZVF-warped.csv.world.csv  Ant03ZVF-warped.csv.world.csv.3d.csv  Ant03ZVF_labels.csv  Ant03ZVOP-warped.csv  Ant03ZVOP-warped.csv.world.csv  Ant03ZVOP_labels.csv  Ant06R01-warped.csv  Ant06R01-warped.csv.world.csv  Ant06R01-warped.csv.world.csv.3d.csv  Ant06R01_labels.csv  Ant06R02-warped.csv  Ant06R02-warped.csv.world.csv  Ant06R02-warped.csv.world.csv.3d.csv  Ant06R03-warped.csv  Ant06R03-warped.csv.world.csv  (+84 more)
data/seville/orig_paths/: Ant03R01.csv  Ant03R01_labels.csv  Ant03R02.csv  Ant03R03.csv  Ant03R05.csv  Ant03R06.csv  Ant03R06_labels.csv  Ant03R07.csv  Ant03ZVF.csv  Ant03ZVOP.csv  Ant03ZVSF.csv  Ant03ZVSF_labels.csv  Ant04R05.csv  Ant04R05_labels.csv  Ant04R06.csv  Ant04R06_labels.csv  Ant04R07.csv  Ant04R07_labels.csv  Ant04R08.csv  Ant04R08_labels.csv  Ant04R09.csv  Ant04R09_labels.csv  Ant04R10.csv  Ant04R10_labels.csv  Ant04ZVF.csv  Ant04ZVF_labels.csv  Ant04ZVOP.csv  Ant04ZVOP_labels.csv  Ant04ZVSF.csv  Ant04ZVSF_labels.csv  Ant05R01.csv  Ant05R01_labels.csv  Ant05R03.csv  Ant05R03_labels.csv  Ant05R04.csv  Ant05R04_labels.csv  Ant05R07.csv  Ant05R07_labels.csv  Ant05R08.csv  Ant05R08_labels.csv  (+124 more)
four_paths/: four_paths.sh
include/: AntBodyVisual.h  AntVisual.h  DoubleHexGridVisual.h  NavMeshMovementData.h  antpovvisual.h  eye3dvisual.h  spline.hpp
modules/: FlowConfig.cppm  FlowParameters.cppm  FlowProcessor.cppm  FlowProcessorBase.cppm  FlowProcessorDyn.cppm  antpov_helpers.cppm  craysim_visual.cppm  flowexample.cppm  random_outbound.cppm
movies/: README.md  ffmpg_cmd.txt
scripts/: README.md
scripts/ant03/: top_down.sh  top_down_higher.sh  top_down_higher_movie.sh  top_down_movie.sh  various_cam_angles.sh  various_cam_angles_movie.sh
scripts/ant12/: r01_r02_zvf.sh
scripts/four_paths/: four_paths.sh
scripts/movies/: Ant03R01.sh  Ant12R01.sh
simple_eyes/: CMakeLists.txt  README.md  ant_eyes.cpp  make_cyl_eye.cpp  make_fourpi_eye.cpp  make_foveated_cutout.cpp  make_poly_eye.cpp  make_zernike.cpp
src/: CMakeLists.txt  README.md  antpov.cpp  antpov_plotcoords.cpp  cater_graph.cpp  cater_paths.cpp  cater_sel_paths.cpp  dirns.cpp  eye3d.cpp  fiducials.cpp  flow_vis.cpp
testpaths/: sine.cpp  x2.cpp
